chore: Untrack mcp_searcher_test_env and add to .gitignore
The mcp_searcher_test_env/ directory is specific to local testing
and should not be part of the remote repository.

This commit:
- Adds mcp_searcher_test_env/ to .gitignore.
- Removes mcp_searcher_test_env/ from Git tracking.
  The directory will remain available locally for testing.

--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,7 @@ MANIFEST
 tasks.json
 tasks/
 .taskmasterconfig
-scripts/task-complexity-report.json 
+scripts/task-complexity-report.json
+
+# Test environment specific to mcp-codebase-searcher
+mcp_searcher_test_env/ 
