chore: Untrack specific plan and log text files
This commit untracks the following files and adds them to .gitignore
as they are primarily for local planning, testing, or logging and
are not essential for the core codebase or its general documentation:

- mcp_codebase_searcher_debugging_plan.txt
- task_master_test_plan.txt
- potential_bugs_log.txt
- prd.txt

These files will remain available locally but will no longer be
tracked by Git or pushed to the remote repository.

--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,10 @@ tasks/
 scripts/task-complexity-report.json
 
 # Test environment specific to mcp-codebase-searcher
-mcp_searcher_test_env/ 
+mcp_searcher_test_env/
+
+# Planning and log files
+mcp_codebase_searcher_debugging_plan.txt
+task_master_test_plan.txt
+potential_bugs_log.txt
+prd.txt 
